src/app/app.component.scss
$active-orange:#F44336;

img{
&.w-100 {
    max-height: 100vh !important;
    max-width:100% !important;
  }
}

nav{
    position:absolute;
    right:10px;
    top:75px;
    z-index:10;
    li {
        margin-left: 8px;
        margin-right: 8px;
    
        &.active{
            background: $active-orange !important;
        }
        &:hover{
            background: $active-orange;
        }
        &>a{
        color:white;
        text-transform: uppercase;
        margin: 4px;
        padding: 10px;
        font-size: 15px;
        
    }
        
    }
}

.carousel-indicators li {
    width: 12px;
    height: 12px;
    border-radius: 100%;
    &.active{
        background-color: $active-orange;
    }
  }

.carousel-caption{
        
        text-align: center;
        padding-top:0px;
        bottom:80px;
        max-width: 350px;
        left:14%;
        .caption-header-red{
            font-weight:500 !important;
            color:$active-orange;
            text-transform: uppercase;
        }

        .caption-header-white{
            font-weight:500 !important;
            color:white;
            text-transform: uppercase;
        }

        .caption-sub-header{
            color:white;
        }
}
.services-heading,.testimonial-heading{
    font-family: "Raleway";
    font-weight: 900;
    text-align: center;
    font-size: 50px;
    color:white
  }
  .gallery-heading{
    font-family: "Raleway";
    font-weight: 900;
    text-align: center;
    font-size: 50px;
    color:black
  }
  .sub-section-heading{
    color:red;
    font-family: "Raleway", Sans-serif;
    font-weight: bolder;
    text-align: center;
  }
  .para{
    color:white;
    font-family: "Roboto", Sans-serif;
    margin:20px;
    font-size:12px;
    text-align:left;
    line-height:2em
  }
  .para1{
    font-family: "Raleway";
    font-weight: 900;
    text-align: center;
    font-size: 30px;
    color:black
  }
  .images{
    width:100%;
    height:auto
  }
  .services-section{
    background-color: black;
  }
  .row{
    margin-left:40px;
    margin-right:40px;
  }

  .container {
    margin-top: 100px;
    margin-bottom: 100px
}

.carousel-inner img {
    width: 100%;
    height: 100%
}

#custCarousel .carousel-indicators {
    position: static;
    margin-top: 20px
}

#custCarousel .carousel-indicators>li {
    width:100px
}

#custCarousel .carousel-indicators li img {
    display: block;
    opacity: 0.5
}

#custCarousel .carousel-indicators li.active img {
    opacity: 1
}

#custCarousel .carousel-indicators li:hover img {
    opacity: 0.75
}

.carousel-item img {
    width: 80%
}
 .book-now-button{
  border-radius:20px;
  margin-top: 20px;
  margin: 0 auto;
  display: block;
 }
 .service-images{
     height:auto;
     width:50%;
     padding:40px;
     transition: 0.3s;
 }
 .service-images:hover{
  transform: translate(0, -20px);
 }
 .image-title{
    font-family: "Raleway";
    font-weight: 900;   
    font-size: 20px;
    color:black
 }
 .circle{
     width: 200px;
     height:200px;
     line-height: 200px;
     border-radius: 50%;
     font-size:30px;
     color:#fff;
     text-align: center;
     margin-left:10px;
     margin-right:10px;
     margin-bottom:30px;
     background-color:#D9322A;
     float:left;
 }

